Fix Bug#56143 too many foreign keys causes output of show create table to become invalid

Just remove the check whether the file is "too big".
A similar code exists in ha_innobase::update_table_comment() but that
method does not seem to be used.